<resources>
    <string name="app_name">CRUDLibro</string>

    <string name="str_btnbuscar">Buscar Libro</string>
    <string name="str_btnregistrar">Registrar Libro</string>
    <string name="str_btnlistar">Listar Libros</string>
    <string name="ges_btnborrar">Borrar</string>
    <string name="ges_btnguardar">Guardar</string>
    <string name="ges_btnactualizar">Actualizar</string>


    <string name="str_titulo">Titulo</string>
    <string name="str_subtitulo">Subtitulo</string>
    <string name="str_isbn">ISBN</string>
    <string name="str_autor">Autor</string>
    <string name="str_anio_publicacion">Año Publicación</string>
    <string name="str_precio">Precio</string>

    <string name="ges_titulo">Ingrese el titulo del libro</string>



    <string name="str_bienvenido">Bienvenidos</string>
    <string name="str_descripcion_imagen">Todo</string>
    <string name="str_listarlibros">Listado de Libros</string>
    <string name="str_gestionlibros">Gestión de Libros</string>
    <string name="str_buscarLibros">Buscar Libro por titulo</string>

    <string name="str_digitetitulo">Ingrese el titulo a buscar</string>
</resources>