<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionarLibroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestionlibros"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#3F51B5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_titulo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_titulo"
        android:autofillHints="titulo"
        android:hint="@string/str_digitetitulo"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_subtitulo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_subtitulo"
        android:autofillHints="subtitulo"
        android:hint="@string/str_subtitulo"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_anio_publicacion"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_anio_publicacion"
        android:autofillHints="año publicacion"
        android:hint="@string/str_anio_publicacion"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_autor"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_autor"
        android:autofillHints="autor"
        android:hint="@string/str_autor"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_isbn"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_isbn"
        android:autofillHints="isbn"
        android:hint="@string/str_isbn"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_precio"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ges_precio"
        android:autofillHints="precio"
        android:hint="@string/str_precio"
        android:inputType="text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ges_btnguardar"
        android:layout_gravity="center_horizontal"
        android:text="@string/ges_btnguardar"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ges_btnactualizar"
        android:layout_gravity="center_horizontal"
        android:text="@string/ges_btnactualizar"
        android:onClick="onClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ges_btnborrar"
        android:layout_gravity="center_horizontal"
        android:text="@string/ges_btnborrar"
        android:onClick="onClick"
        />



</LinearLayout>